--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
+    "express-promise-router": "^4.1.1",
     "helmet": "^5.1.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
@@ -31,6 +31,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.7.3",
     "nodemon": "^2.0.19",
+    "sequelize-cli": "^6.4.1",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.1.0",
