--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
-import { resolve } from 'path'
+const path = require('path')
 
-export default {
-  config: resolve('src/config', 'database.js'),
-  'models-path': resolve('src', 'models'),
-  'seeders-path': resolve('src/db', 'seeders'),
-  'migrations-path': resolve('src/db', 'migrations')
+module.exports = {
+  config: path.resolve('src/config', 'database.js'),
+  'models-path': path.resolve('src', 'models'),
+  'seeders-path': path.resolve('src/db', 'seeders'),
+  'migrations-path': path.resolve('src/db', 'migrations')
 }
